[FIXED HUDSON-5017] allow triggering if build result was FAILURE

--- a/src/main/resources/hudson/plugins/downstream_ext/DownstreamTrigger/config_de.properties
+++ b/src/main/resources/hudson/plugins/downstream_ext/DownstreamTrigger/config_de.properties
@@ -21,5 +21,6 @@
 # THE SOFTWARE.
 
 Projects\ to\ build=Zu bauende Projekte
-Trigger\ even\ if\ the\ build\ is\ unstable=Auslösen, selbst wenn der Build instabil ist.
+Trigger\ threshold=Auslösungsschwellwert
+Trigger\ downstream\ job\ if\ build\ result\ is\ x\ or\ better=Löse nachgelagertes Projekt aus, falls das Build-Ergebnis x oder besser ist
 Trigger\ only\ if\ downstream\ project\ has\ SCM\ changes=Nur Auslösen falls nachgelagertes Projekt SCM Änderungen hat.
