--- a/src/main/resources/hudson/plugins/downstream_ext/Messages.properties
+++ b/src/main/resources/hudson/plugins/downstream_ext/Messages.properties
@@ -1,2 +1,2 @@
-DownstreamTrigger.DisplayName=Trigger downstream (extended)
+DownstreamTrigger.DisplayName=Build other projects (extended)
 DownstreamTrigger.NoSCMChanges={0} has no SCM changes. Triggering skipped
