add configuration to check for local SCM changes

--- a/src/main/resources/hudson/plugins/downstream_ext/DownstreamTrigger/config_de.properties
+++ b/src/main/resources/hudson/plugins/downstream_ext/DownstreamTrigger/config_de.properties
@@ -24,3 +24,4 @@ Projects\ to\ build=Zu bauende Projekte
 Build\ result\ is=Build-Ergebnis ist
 Trigger\ downstream\ job\ if\ build\ result\ meets\ condition=Löse nachgelagertes Projekt aus, falls das Build-Ergebnis der Bedingung entspricht
 Trigger\ only\ if\ downstream\ project\ has\ SCM\ changes=Nur Auslösen falls nachgelagertes Projekt SCM Änderungen hat.
+Trigger\ only\ if\ current\ project\ has\ SCM\ changes=Nur Auslösen falls aktuelles Projekt SCM Änderungen hat.
